fix layout issue

--- a/src/stylesheets/base/_layout.scss
+++ b/src/stylesheets/base/_layout.scss
@@ -2,8 +2,5 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
   background: linear-gradient(#f0f3f7, #dee3ec);
 }
