--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -4,6 +4,7 @@
   color: $gray-800;
   background: #fff;
   border-radius: .65rem;
+  margin: 3rem 0 6rem;
   box-shadow: 0 10px 20px rgba(3, 27, 78, .05);
   overflow: hidden;
 
